Amélioration des styles de VigiBoard et correction de problèmes de rendu.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2141 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/colorblind.css
+++ b/src/vigilo/themes/public/vigiboard/css/colorblind.css
@@ -1,15 +1,12 @@
-.boolbar {
+.toolbar {
 	border: solid 0px black;
 }
 
-.vigitable thead tr th {
+.plugins th {
 	border: solid 1px #EBECF0;
 }
 
-.vigitable tbody tr {
-	border: solid 1px white;
-}
-
+.vigitable tbody tr,
 .vigitable tbody tr td {
 	border: solid 1px white;
 }
