--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/date.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/date.html
@@ -5,7 +5,7 @@
 <py:def function="plugin_template(name, instance)">
 </py:def>
 
-<th id="plugin_${name}" py:def="header_template(name, instance)">
+<th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)">
     Date<br />
     Duration
 </th>
