--- a/src/vigilo/themes/public/vigiboard/css/classical.css
+++ b/src/vigilo/themes/public/vigiboard/css/classical.css
@@ -3,19 +3,12 @@
 	background-color: #F0F1F5;
 }
 
-.history_table thead {
-	background-color: #F8F8F8;
-}
-
-.vigitable thead tr th {
+.plugins th {
 	background-color: #EBECF0;
 	border: solid 1px #EBECF0;
 }
 
-.vigitable tbody tr {
-	border: solid 1px white;
-}
-
+.vigitable tbody tr,
 .vigitable tbody tr td {
 	border: solid 1px white;
 }
@@ -25,6 +18,7 @@
     background-color: #4682b4;
 }
 
+.history_table thead,
 tr.odd {
 	background-color: #F8F8F8;
 }
@@ -71,12 +65,11 @@ a {
     background: #f9c5c1 url(../images/error.png) no-repeat scroll 0px center;
 }
 #flash .alert,
-#flash .info {
-    background: #EEEEFF url(../images/info.png) no-repeat scroll 0px center;
-}
+#flash .info,
 .notice {
     background: #EEEEFF url(../images/info.png) no-repeat scroll 0px center;
 }
+
 .fielderror {
     color: red;
 }
