--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/tt.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/tt.html
@@ -5,7 +5,7 @@
 <py:def function="plugin_template(name, instance)">
 </py:def>
 
-<th id="plugin_${name}" py:def="header_template(name, instance)" title="Trouble Ticket">[TT]</th>
+<th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)" title="Trouble Ticket">[TT]</th>
 
 <td class="plugin_${name}" py:def="data_template(name, instance, data)">${data[0].trouble_ticket}</td>
 
