--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/history.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/history.html
@@ -6,14 +6,20 @@
 <div id="DetailsDialog">
     <h2>State info</h2>
     <div id="state_info">
-        <div class="value" id="DetailsDialog_initial_state"></div>
-        <div class="label">Initial State:</div>
+        <div class="label">
+            Initial State:
+            <span class="value" id="DetailsDialog_initial_state"></span>
+        </div>
         
-        <div class="value" id="DetailsDialog_current_state"></div>
-        <div class="label">Current State:</div>
+        <div class="label">
+            Current State:
+            <span class="value" id="DetailsDialog_current_state"></span>
+        </div>
         
-        <div class="value" id="DetailsDialog_peak_state"></div>
-        <div class="label">Peak State:</div>
+        <div class="label">
+            Peak State:
+            <span class="value" id="DetailsDialog_peak_state"></span>
+        </div>
     </div>
     
     <hr />
