Quelques retouches dans les styles de Vigiboard + préparation pour le changement de design des historiques.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2146 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -90,6 +90,8 @@ img {
     right: 0px;
     width: 100%;
     position: absolute;
+    /* Pour les navigateurs un peu plus évolués. */
+    position: fixed;
 }
 #flash div, .notice {
     padding: 8px 7px 6px 44px;
