--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/date.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/date.html
@@ -7,7 +7,7 @@
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)">
     Date<br />
-    Duration
+    [Duration]
 </th>
 
 <py:def function="data_template(name, instance, data)">
