--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/history.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/history.html
@@ -82,7 +82,7 @@ window.addEvent("domready", function () {
                     $$('DetailsDialog_initial_state').set('text', details.initial_state);
                     $$('DetailsDialog_current_state').set('text', details.current_state);
                     $$('DetailsDialog_peak_state').set('text', details.peak_state);
-                    $$('DetailsDialog_event').set('href', "${tg.url('/event/')}" + details.idcorrevent);
+                    $$('DetailsDialog_event').set('href', "${tg.url('/event/')}" + details.idcause);
                     $$('DetailsDialog_masked').set('href', "${tg.url('/masked_events/')}" + details.idcorrevent);
                     if (details.service) {
                         $$('DetailsDialog_item').set('href', "${tg.url('/item/')}" + details.host + "/" + details.service);
