Petites corrections dans les templates de VigiBoard.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2156 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:xi="http://www.w3.org/2001/XInclude"
-    xmlns:py="http://genshi.edgewall.org/">
+    xmlns:py="http://genshi.edgewall.org/"
+    py:strip="">
 
 <py:def function="toolbar(themes, refresh_times, search)">
 <div class="toolbar">
@@ -200,7 +201,6 @@
     }
 /*]]>*/
 </script>
-</div>
 </py:def>
 </html>
 
